Git_to_Salesforce/ Q-assign/objects/Assignment_Group__c.object
<CustomObject>
    <description>This is the main object of Q-assign. it contains all the information about records assignment criteria,  records source, assignment method, mode, cap and quotas etc.</description>
    <fields>
        <fullName>ARC_Filter_Logic__c</fullName>
        <label>ARC Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARC_Prepared_Form__c</fullName>
        <label>ARC Prepared Form</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Only_Outside_Working_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Only Outside Working Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Records_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active records only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Records__c</fullName>
        <label>Active Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Status_Field__c</fullName>
        <label>Active Status Field</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Statuses__c</fullName>
        <label>Active Statuses</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Timeout__c</fullName>
        <label>Activity Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assign_To_Logged_In_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign To Logged In Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_Users_in_Working_Shift_Hours_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assign to users in their Working/Shift Hours only</description>
        <inlineHelpText>Assign to users in their Working/Shift Hours only</inlineHelpText>
        <label>Assign Users in Working Shift Hours Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Method2__c</fullName>
        <label>Assignment Method2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIFO / Ascending</fullName>
                </value>
                <value>
                    <fullName>LIFO / Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Method3__c</fullName>
        <label>Assignment Method3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIFO / Ascending</fullName>
                </value>
                <value>
                    <fullName>LIFO / Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Method_Basis2__c</fullName>
        <label>Assignment Method Basis2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Method_Basis3__c</fullName>
        <label>Assignment Method Basis3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Method_Basis__c</fullName>
        <label>Assignment Method Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LastModifiedDate</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CreatedDate</fullName>
                </value>
                <value>
                    <fullName>Q_assign_Custom_Seq__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Method__c</fullName>
        <label>Assignment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FIFO / Ascending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>LIFO / Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Mode__c</fullName>
        <label>Assignment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Round Robin</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Load Balanced + Selection Criteria</fullName>
                </value>
                <value>
                    <fullName>Points Based - Highest Points</fullName>
                </value>
                <value>
                    <fullName>Points Based - Lowest Points</fullName>
                </value>
                <value>
                    <fullName>Load Balanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Quota__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assignment Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment_Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assignment Sequence</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignments_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Assignments level</description>
        <label>Max Assignment Cap</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours Schedule</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>QA_Assignment_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comply_With_Cap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comply With Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comply_With_Quota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comply With Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Config_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Config Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Assignment_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Config_Last_Updated_Date__c</fullName>
        <label>Config Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global_Assignment_Quota_Period__c</fullName>
        <label>Global Assignment Quota Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Assignment_Quota__c</fullName>
        <defaultValue>(0)</defaultValue>
        <label>Global Assignment Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Assignment_Date__c</fullName>
        <inlineHelpText>Date Time when this group last processed through schedular</inlineHelpText>
        <label>Last Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Load_Points_Field__c</fullName>
        <label>Load Points Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Field__c</fullName>
        <label>Match Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Rule_Filter_Logic__c</fullName>
        <description>Stores filter logic for matching rules.</description>
        <label>Matching Rule Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Assignment_Points_Cap__c</fullName>
        <label>Max Load Points Cap</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Owner_Field__c</fullName>
        <description>This field is used to store API name of the object&apos;s field that is populated with the Id of the user when assignment happens. It defaults to OwenrId (built-in) field of object. Users can specify what field to use as &quot;Owner&quot;.</description>
        <inlineHelpText>This field is used to store API name of the object&apos;s field that is populated with the Id of the user when assignment happens. It defaults to OwenrId (built-in) field of object. Users can specify what field to use as &quot;Owner&quot;.</inlineHelpText>
        <label>Object Owner Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Prefix__c</fullName>
        <description>Object prefix</description>
        <label>Object Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Assign_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Assign Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Object_Settings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Object Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Point_Score_Threshold__c</fullName>
        <label>Point Score Threshold</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Members_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Members Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processing_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Processing Order</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processing_Type__c</fullName>
        <label>Processing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Push</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pull</fullName>
                </value>
                <value>
                    <fullName>Push + Pull</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QSC_Filter_Logic__c</fullName>
        <label>QSC Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QSC_Prepared_Form__c</fullName>
        <label>QSC Prepared Form</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Type__c</fullName>
        <label>Queue Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records_Processed__c</fullName>
        <label>Records Processed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records_Selected_From_Queue__c</fullName>
        <label>Records Selected From Queue</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refresh_Time__c</fullName>
        <inlineHelpText>Auto refresh time (in seconds) for Assignment Group members page.</inlineHelpText>
        <label>Refresh Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Quota_Period__c</fullName>
        <label>Quota Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rule Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Matching_Rules_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Matching Rules Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Pull_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Pull Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>This_Distribution_Group_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>This Distribution Group only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Unit__c</fullName>
        <label>Time Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Units_Of_Time__c</fullName>
        <label>Units Of Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Field__c</fullName>
        <label>Update Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Value__c</fullName>
        <label>Update Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Assignment_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Working_Hours_Schedule__c</fullName>
        <label>Assignment Hours Schedule</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>QA Assignment Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Processing_Order__c</columns>
        <columns>Processing_Type__c</columns>
        <columns>Assignment_Mode__c</columns>
        <columns>Round_Robin_Quota_Period__c</columns>
        <columns>Assignments_Level__c</columns>
        <columns>Assignment_Quota__c</columns>
        <columns>Global_Assignment_Quota__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Assignment Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>